# justext4

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  README.md  SECURITY.md  book.toml
.github/workflows/: ci.yml  pages.yml  release.yml
cli/: Cargo.toml
cli/src/: lib.rs  main.rs
docs/: README.md  SUMMARY.md  glossary.md
docs/0-ideation/: market_research.md  use_case.md  value_proposition.md
docs/1-requirements/: README.md
docs/2-planning/: README.md
docs/3-design/: architecture.md  integration_guide.md
docs/3-design/adr/: README.md
docs/3-design/compliance/: compliance_checklist.md
docs/4-development/: developer_guide.md
docs/5-testing/: benchmarks.md  testing_strategy.md
docs/6-deployment/: deployment_guide.md  operations_manual.md
docs/7-operation/: README.md
docs/7-operations/: operations_manual.md
ext4/: Cargo.toml
ext4/benches/: write_image.rs
ext4/src/: error.rs  filesystem.rs  lib.rs  mkfs.rs
ext4/tests/: e2fsck_acceptance.rs  metadata_tests.rs  real_mkfs_roundtrip.rs  rename_tests.rs  reproducibility.rs  truncate_tests.rs
ext4/tests/fixtures/: build_real_mkfs_fixture.sh  real_minimal.ext4
fuzz/: Cargo.toml  README.md
fuzz/fuzz_targets/: dir_block_decode.rs  extent_node_decode.rs  group_descriptor_decode.rs  inode_decode.rs  superblock_decode.rs
scripts/bench/: compare_mkfs.sh
spec/: Cargo.toml
spec/src/: bitmap.rs  dir_entry.rs  extent.rs  group_descriptor.rs  inode.rs  lib.rs  superblock.rs
