[package]
name        = "swe_justext4_spec"
version     = "0.1.0"
description = "On-disk format types for ext4 — superblock, group descriptor, inode, extent, dirent. Pure structs + decode/encode. No IO."
edition.workspace      = true
license.workspace      = true
repository.workspace   = true
authors.workspace      = true
rust-version.workspace = true

[lib]
name = "spec"
path = "src/lib.rs"

[dependencies]
thiserror = { workspace = true }

[lints]
workspace = true
